<?xml version="1.0"?>
<package format="3">
  <name>drone_vision</name>
  <version>0.0.1</version>
  <description>Tag detection listener for autonomous drone</description>

  <maintainer email="pranavmoolapattu@gamil.com">Pranav Moolapattu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
